# python-project-lvl2

./: .coverage  .gitignore  Makefile  README.md  coverage.xml  pyproject.toml  setup.cfg
.github/workflows/: Test.yml
gendiff/: __init__.py  cli.py  decode_file.py  decode_files.py  diff.py  diff_.py  diff_view.py  engine.py  parse.py  parser.py  read_file.py  replaser.py  stylish.py
gendiff/formaters/: jsonish.py  plain.py  replaser.py  stylish.py
gendiff/formatters/: _stylish.py  jsonish.py  plain.py  replaser.py  stylish.py
gendiff/scripts/: __init__.py  gendiff.py
tests/: _def test_diff_view.py  _test_decode_files.py  _test_gendiff.py  _test_jsonish.py  _test_replaser.py  test_decode_files.py  test_diff.py  test_diff_view.py  test_formatters.py  test_gendiff.py  test_generate_diff.py  test_plain.py  test_replaser.py  test_stylish.py
tests/fixtures/: jsonish.txt  result_diff_json  results.py
tests/test_data/: diff_view_data.py  formatters_data.py  replacer_data.py
